--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Vite + React + TS</title>
   </head>
   <body>
-    <div id="root" class="h-screen bg-slate-300 dark:bg-slate-900"></div>
+    <div
+      id="root"
+      class="h-auto bg-slate-300 dark:bg-slate-900 flex flex-col"
+    ></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
