--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <title>Vite + React + TS</title>
   </head>
   <body>
-    <div
-      id="root"
-      class="h-auto bg-slate-300 dark:bg-slate-900 flex flex-col"
-    ></div>
+    <div id="root" class="h-auto bg-primary flex flex-col"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
